--- a/datawarehouse/introduction.mdx
+++ b/datawarehouse/introduction.mdx
@@ -40,7 +40,13 @@ For example, a marketing team might join customer behavior data with transaction
 
 ### Data Marketplace
 
-One of the most significant innovations in modern data warehouses is the concept of a **data marketplace**. Snowflake and Databricks have transformed their platforms into exchanges where organizations can share, discover, and monetize data assets. These marketplaces have become increasingly popular, with Snowflake reporting that **32%** of their customers are now using their data sharing features.
+One of the most significant innovations in modern data warehouses is the concept of a **data marketplace**.
+
+Snowflake and Databricks have transformed their platforms into exchanges where organizations can share, discover, and monetize data assets. These marketplaces have become increasingly popular, with Snowflake reporting that **36%** of their customers are now using their data sharing features.
+
+<Card title='Data Marketplace' icon='shop' href='/marketplace/introduction'>
+  Learn how to discover and share data assets on Chakra
+</Card>
 
 # The Problems with Current Solutions
 
@@ -82,7 +88,3 @@ The challenges with traditional data warehouses point to the need for a new appr
     Already have data? Load it into Chakra in minutes.
   </Card>
 </CardGroup>
-
-### End
-
-Let's build a better world computer for data that actually works for consumers, enterprises, and AI use-cases.
