--- a/datawarehouse/workspace.mdx
+++ b/datawarehouse/workspace.mdx
@@ -29,6 +29,8 @@ When a user first signs up, they can either:
   migrate your account for now.
 </Note>
 
+Currently, organizations are automatically created based on Google SSO. If you need help joining or migrating orgs, do reach [out](https://discord.gg/chakra-ai).
+
 # Roles and Permissions
 
 Chakra currently supports two roles to keep things simple:
@@ -45,37 +47,6 @@ Chakra currently supports two roles to keep things simple:
 - Access all organization resources
 - Full access to databases, integrations, and worksheets
 
-<Note>
-  We're starting with a simple permissions model to help teams get started
-  quickly. More granular access controls will be added based on customer
-  feedback and needs.
-</Note>
-
-# Managing Your Organization
-
-## For Admins
-
-### Adding Users
-
-1. Navigate to the Admin Panel
-2. Click "Invite Users"
-3. Enter email addresses
-4. Select role (Admin/Member)
-
-### Removing Users
-
-1. Go to Admin Panel
-2. Click "Manage Users"
-3. Find the user
-4. Click "Remove User"
-
-### Changing Roles
-
-1. Access Admin Panel
-2. Select "Manage Roles"
-3. Find the user
-4. Toggle between Admin/Member
-
 # Future Enhancements
 
 While we're starting with a straightforward permissions model, we're planning to add:
@@ -84,5 +55,3 @@ While we're starting with a straightforward permissions model, we're planning to
 - Custom roles
 - Project-based access controls
 - Advanced audit logging
-
-Have suggestions for organization management features? Join our [Discord](https://discord.gg/chakra-ai) to share your feedback!
