--- a/marketplace/introduction.mdx
+++ b/marketplace/introduction.mdx
@@ -1,42 +1,26 @@
 ---
-title: 'Coming Soon!'
-description: 'The home for the most important datasets in the world'
+title: 'Introduction'
+description: 'The easiest place to share and consume data.'
 icon: 'puzzle-piece'
 ---
 
-<Note>
-  Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the
-  marketplace launch and be first in line for early access.
-</Note>
-<img src='/images/cooking.webp' alt='Happy lemonade stand illustration' />
-<p className='text-sm text-center italic'>
-  Excuse the lack of detail here - we're cooking on this page.
-</p>
+<div className='relative w-full aspect-video'>
+  <iframe
+    src='https://player.vimeo.com/video/1051397059?badge=0&autopause=0&player_id=0&autoplay=1&muted=1&loop=1&controls=0&playsinline=true&dnt=1&app_id=58479&transparent=0'
+    frameBorder='0'
+    allow='autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media'
+    title='blog-video-1'
+    data-ready='true'
+    className='absolute top-0 left-0 w-full h-full'
+  ></iframe>
+</div>
 
-The Chakra Data Marketplace will be the home for the world's most valuable
-datasets, providing:
+With the Chakra data marketplace, you can go from CSV to datashare in **\<60 seconds**.
 
-- Direct access to high-value datasets
-- Fair compensation for data creators
-- Streamlined data procurement
-- Enterprise-grade security and compliance
+| Page                                             | Description                        |
+| ------------------------------------------------ | ---------------------------------- |
+| [Browse](https://console.chakra.dev/marketplace) | Discover and subscribe to datasets |
+| [Publish](https://console.chakra.dev/worksheet)  | Share your data with the world     |
+| [Manage](https://console.chakra.dev/marketplace) | View and manage your subscriptions |
 
-## What to Expect
-
-<CardGroup cols={2}>
-  <Card title='Dataset Discovery' icon='magnifying-glass'>
-    Browse and discover valuable datasets from verified providers
-  </Card>
-  <Card title='Fair Pricing' icon='money-bill'>
-    Transparent pricing and revenue sharing for data creators
-  </Card>
-  <Card title='Easy Integration' icon='plug'>
-    Seamless integration with the Chakra Data Warehouse (and integrations to
-    other data warehouses)
-  </Card>
-  <Card title='Enterprise Ready' icon='building'>
-    Built for enterprise compliance and security needs
-  </Card>
-</CardGroup>
-
-Check back soon as we continue building the future of data marketplaces. Want early access? Join our [Discord](https://discord.gg/chakra-ai) community.
+In addition to individual contributors, Chakra is working with several enterprise partners to bootstrap the marketplace. These will be announced shortly.
