--- a/overview.mdx
+++ b/overview.mdx
@@ -17,30 +17,11 @@ icon: 'dharmachakra'
 
 ## Mission
 
-Chakra is building the **World Computer for Structured Data**.
+Chakra's **mission** is to organize the world's structured data.
 
-_We believe in a few things:_
+We **aim to provide** a fast, cost-efficient, and collaborative experience for data engineers, data scientists, and AI researchers to interact with the most important datasets.
 
-1. There are **&lt;10 datasets in the world that drive the vast majority of value** towards traditional analytics and AI use-cases.
-2. Most of these datasets sit in the hands of **users who ultimately provide all the value** but reap none of the rewards.
-3. Enterprises building with AI need access to these key datasets and should have a simpler way **to procure and integrate** them into their workflows.
-
-Chakra is on a mission to **provide the interface for the most important structured datasets in the world**.
-
-## What is Chakra?
-
-Learn more about the problem Chakra is solving and the key benefits of the platform.
-
-<CardGroup cols={2}>
-  <Card title='Background & Problem' icon='lightbulb' href='/background'>
-    Understand the key challenges in data accessibility and management that
-    Chakra aims to solve.
-  </Card>
-  <Card title='Benefits' icon='star' href='/benefits'>
-    Explore the advantages and unique value propositions that Chakra brings to
-    enterprises and users.
-  </Card>
-</CardGroup>
+<img src='/images/system.svg' alt='System Architecture' />
 
 ## Product Suite
 
@@ -56,9 +37,5 @@ Learn more about what Chakra is building and how the products connect together.
   </Card>
   <Card title='Edge Node' icon='screwdriver-wrench' href='/node'>
     A Chrome extension to contribute to the open data marketplace.
-  </Card>
-  <Card title='Drive (Hackathon Winner)' icon='files' href='/drive'>
-    A free to use end-to-end encrypted file store on Solana. Placed 3rd in Radar
-    Hackathon.
   </Card>
 </CardGroup>
