--- a/datawarehouse/introduction.mdx
+++ b/datawarehouse/introduction.mdx
@@ -21,7 +21,7 @@ Modern data warehouses excel at:
 
 The data warehouse industry experienced a fundamental shift in **2015** when Snowflake introduced a revolutionary architecture that **separated storage from compute**. This separation meant organizations could now scale their storage and processing power independently, leading to more flexible and efficient data operations.
 
-<img src='/images/modern-dwh.png' alt='Lit Protocol Encryption Flow' />
+<img width='500' src='/images/modern-dwh.png' />
 
 This new architecture enables organizations to:
 
