updated docs + API references

--- a/overview.mdx
+++ b/overview.mdx
@@ -21,8 +21,6 @@ Chakra's **mission** is to organize the world's structured data.
 
 We **aim to provide** a fast, cost-efficient, and collaborative experience for data engineers, data scientists, and AI researchers to interact with the most important datasets.
 
-<img src='/images/system.svg' alt='System Architecture' />
-
 ## Product Suite
 
 Learn more about what Chakra is building and how the products connect together.
@@ -38,4 +36,9 @@ Learn more about what Chakra is building and how the products connect together.
   <Card title='Edge Node' icon='screwdriver-wrench' href='/node'>
     A Chrome extension to contribute to the open data marketplace.
   </Card>
+  <Card title='API Docs' icon='code' href='/api-reference'>
+    Query and transform your warehouse and marketplace datasets programmatically
+  </Card>
 </CardGroup>
+
+<img src='/images/system.svg' alt='System Architecture' subtitle='test' />
