edge node -> data scout

--- a/benefits.mdx
+++ b/benefits.mdx
@@ -57,7 +57,7 @@ Remember our lemonade stand example? Using Chakra is like upgrading your stand w
 - **Opt-in** privacy controls
 - **Ability** to update or remove data
 
-# For Edge Node Users
+# For Data Scout Users
 
 ### Passive Income
 
