--- a/overview.mdx
+++ b/overview.mdx
@@ -33,7 +33,7 @@ Learn more about what Chakra is building and how the products connect together.
     The home for the most important datasets in the world, sitting atop the data
     warehouse.
   </Card>
-  <Card title='Edge Node' icon='screwdriver-wrench' href='/node'>
+  <Card title='Data Scout' icon='screwdriver-wrench' href='/node'>
     A Chrome extension to contribute to the open data marketplace.
   </Card>
   <Card title='API Docs' icon='code' href='/api-reference'>
