--- a/datawarehouse/scout-ai.mdx
+++ b/datawarehouse/scout-ai.mdx
@@ -4,7 +4,7 @@ description: 'Using AI to query and transform data'
 icon: 'robot'
 ---
 
-<img src='/images/cooking.webp' alt='Edge Node illustration' />
+<img src='/images/cooking.webp' alt='Data Scout illustration' />
 <p className='text-sm text-center italic'>
   Excuse the lack of detail here - we're cooking on this page.
 </p>
