--- a/node/introduction.mdx
+++ b/node/introduction.mdx
@@ -5,10 +5,10 @@ icon: 'puzzle-piece'
 ---
 
 <Note>
-  Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the Edge
-  Node launch and be first in line for early access.
+  Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the Data
+  Scout launch and be first in line for early access.
 </Note>
-<img src='/images/cooking.webp' alt='Edge Node illustration' />
+<img src='/images/cooking.webp' alt='Data Scout illustration' />
 <p className='text-sm text-center italic'>
   Excuse the lack of detail here - we're cooking on this page.
 </p>
