--- a/datawarehouse/chakra-db.mdx
+++ b/datawarehouse/chakra-db.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'ChakraDB'
+title: 'Chakra Data Warehouse'
 description: "How we're different from traditional data warehouses"
 icon: 'dharmachakra'
 ---
 
 # A New Approach to Data Warehousing
 
-ChakraDB is pioneering a fundamentally different approach to data warehousing by combining two powerful innovations: the performance of DuckDB with bare-metal infrastructure.
+Chakra is pioneering a fundamentally different approach to data warehousing by combining two powerful innovations: the performance of DuckDB with bare-metal infrastructure.
 
 <img src='/images/chakra-duck.png' alt='Lit Protocol Encryption Flow' />
 
