--- a/datawarehouse/introduction.mdx
+++ b/datawarehouse/introduction.mdx
@@ -78,7 +78,11 @@ Perhaps most importantly, organizations lose effective control over their data o
 The challenges with traditional data warehouses point to the need for a new approach.
 
 <CardGroup cols={2}>
-  <Card title='ChakraDB' icon='dharmachakra' href='/datawarehouse/chakra-db'>
+  <Card
+    title='Chakra Data Warehouse'
+    icon='dharmachakra'
+    href='/datawarehouse/chakra-db'
+  >
     How's it different than the existing solutions?
   </Card>
   <Card title='Worksheets' icon='table' href='/datawarehouse/worksheet'>
