--- a/datawarehouse/worksheet.mdx
+++ b/datawarehouse/worksheet.mdx
@@ -19,7 +19,7 @@ Worksheets are your home for interacting with your local, subscribed, and publis
 
 ## Loading Data
 
-If you've got a pandas DataFrame, loading data into your ChakraDB is effortless. Check out the [Python SDK](https://github.com/Chakra-Network/python-sdk) for full documentation on how do so.
+If you've got a pandas DataFrame, loading data into your Chakra Data Warehouse is effortless. Check out the [Python SDK](https://github.com/Chakra-Network/python-sdk) for full documentation on how do so.
 
 Your database session key can be found in the [settings page](https://console.chakra.dev/settings)
 
