nuked most of it

--- a/datawarehouse/existing-data.mdx
+++ b/datawarehouse/existing-data.mdx
@@ -8,7 +8,4 @@ icon: 'server'
   Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the
   integrations launch and be first in line for early access.
 </Note>
-<img src='/images/cooking.webp' alt='Happy lemonade stand illustration' />
-<p className='text-sm text-center italic'>
-  Excuse the lack of detail here - we're cooking on this page.
-</p>
+<img src='/images/soon.png' alt='Happy lemonade stand illustration' />
