--- a/datawarehouse/workspace.mdx
+++ b/datawarehouse/workspace.mdx
@@ -1,14 +1,17 @@
 ---
-title: 'Org Management'
+title: 'Organization'
 description: 'Roles + Adding New Members'
 icon: 'users'
 ---
 
 <img src='/images/org.png' alt='Org' />
 
-Chakra uses a simple, streamlined organization model where each user belongs to exactly one organization. This helps keep your data and resources organized while maintaining simplicity.
+Chakra uses a simple, streamlined organization model where each user belongs to exactly one organization.
+This helps keep your data and resources organized while maintaining simplicity.
 
-# User Authentication
+You can find your organization page by navigating to [settings](https://console.chakra.dev/settings).
+
+## User Authentication
 
 Users can join Chakra through:
 
@@ -16,7 +19,7 @@ Users can join Chakra through:
 - Email/Password
 - GitHub
 
-# Organization Setup
+## Organization Setup
 
 When a user first signs up, they can either:
 
@@ -35,23 +38,14 @@ Currently, organizations are automatically created based on Google SSO. If you n
 
 Chakra currently supports two roles to keep things simple:
 
-## Admin Role
+### Admin Role
 
 - Manage users (invite/remove)
 - Change user roles
 - Access all organization resources
 - Full access to databases, integrations, and worksheets
 
-## Member Role
+### Member Role
 
 - Access all organization resources
 - Full access to databases, integrations, and worksheets
-
-# Future Enhancements
-
-While we're starting with a straightforward permissions model, we're planning to add:
-
-- More granular resource-level permissions
-- Custom roles
-- Project-based access controls
-- Advanced audit logging
