--- a/node/introduction.mdx
+++ b/node/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Coming Soon!'
+title: 'Introduction'
 description: 'Contribute to the open data marketplace and earn rewards'
 icon: 'puzzle-piece'
 ---
@@ -8,10 +8,7 @@ icon: 'puzzle-piece'
   Join our [Discord](https://discord.gg/chakra-ai) to stay updated on the Data
   Scout launch and be first in line for early access.
 </Note>
-<img src='/images/cooking.webp' alt='Data Scout illustration' />
-<p className='text-sm text-center italic'>
-  Excuse the lack of detail here - we're cooking on this page.
-</p>
+<img src='/images/soon.png' alt='Data Scout illustration' />
 
 ## What to Expect
 
