--- a/overview.mdx
+++ b/overview.mdx
@@ -1,19 +1,10 @@
 ---
-title: Overview
-description: 'Welcome to the Chakra Documentation Hub!'
+title: Introduction
+description: 'Welcome to the Chakra Docs!'
 icon: 'dharmachakra'
 ---
 
-<img
-  className='block dark:hidden'
-  src='/images/hero-light.svg'
-  alt='Hero Light'
-/>
-<img
-  className='hidden dark:block'
-  src='/images/hero-dark.svg'
-  alt='Hero Dark'
-/>
+<img src='/images/chakra.png' alt='Hero' />
 
 ## Mission
 
@@ -24,6 +15,8 @@ We **aim to provide** a fast, cost-efficient, and collaborative experience for d
 ## Product Suite
 
 Learn more about what Chakra is building and how the products connect together.
+
+<img src='/images/system.svg' alt='System Architecture' subtitle='test' />
 
 <CardGroup cols={2}>
   <Card title='Data Warehouse' icon='house' href='/datawarehouse'>
@@ -40,5 +33,3 @@ Learn more about what Chakra is building and how the products connect together.
     Query and transform your warehouse and marketplace datasets programmatically
   </Card>
 </CardGroup>
-
-<img src='/images/system.svg' alt='System Architecture' subtitle='test' />
