--- a/overview.mdx
+++ b/overview.mdx
@@ -19,7 +19,7 @@ Learn more about what Chakra is building and how the products connect together.
 <img src='/images/system.svg' alt='System Architecture' subtitle='test' />
 
 <CardGroup cols={2}>
-  <Card title='Data Warehouse' icon='house' href='/datawarehouse'>
+  <Card title='Data Warehouse' icon='house' href='/datawarehouse/quick-start'>
     The place to ingest, transform, and query your enterprise's key datasets.
   </Card>
   <Card title='Data Marketplace' icon='code' href='/marketplace'>
