--- a/datawarehouse/quick-start.mdx
+++ b/datawarehouse/quick-start.mdx
@@ -8,7 +8,7 @@ icon: 'play'
 
 <Steps>
   <Step title='Sign-Up'>
-    Navigate to the [app](https://console.chakra.dev/) and create your accout
+    Navigate to the [platform](https://console.chakra.dev/) and create your accout
     using email or SSO.
     <img src='/images/quickstart-1.png' />
   </Step>
