update marimo link

--- a/datawarehouse/notebook.mdx
+++ b/datawarehouse/notebook.mdx
@@ -24,7 +24,7 @@ df.plot()
 
 ## Consider Using Marimo
 
-While Jupyter notebooks are widely used, we recommend trying [Marimo](https://marimo.io) - a modern Python notebook that addresses many of Jupyter's limitations. Marimo offers:
+While Jupyter notebooks are widely used, we recommend trying [Marimo](https://marimo.io/dashboard/projects) - a modern Python notebook that addresses many of Jupyter's limitations. Marimo offers:
 
 - Real-time reactivity
 - Better version control compatibility
