--- a/datawarehouse/mcp.mdx
+++ b/datawarehouse/mcp.mdx
@@ -47,7 +47,9 @@ With MCP, existing chat experiences can be augmented with data from the marketpl
 <Steps>
   <Step>
     Follow instructions 1-4 above. Make sure you install the pre-requisites for
-    the MCP server, including Python and uv (you need not install OpenTools).
+    the MCP server, including Python 3.11+ and
+    [uv](https://docs.astral.sh/uv/getting-started/installation/#installation-methods).
+    On MacOS, you can install this using `brew install uv`
   </Step>
   <Step>Navigate to Settings -> Cursor Settings</Step>
   <Step>
