--- a/datawarehouse/mcp.mdx
+++ b/datawarehouse/mcp.mdx
@@ -28,7 +28,7 @@ With MCP, existing chat experiences can be augmented with data from the marketpl
 <Steps>
   <Step title='Sign-Up'>
     Navigate to the [platform](https://console.chakra.dev/) and create your
-    accout using email or SSO.
+    accout using email or SSO
     <img src='/images/quickstart-1.png' />
   </Step>
   <Step title='Select your storage provider + region and provision your data warehouse'>
