add data shares

--- a/marketplace/introduction.mdx
+++ b/marketplace/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introduction'
-description: 'The easiest place to share and consume data.'
+description: 'The easiest place to share and consume data'
 icon: 'puzzle-piece'
 ---
 
@@ -15,7 +15,7 @@ icon: 'puzzle-piece'
   ></iframe>
 </div>
 
-With the Chakra data marketplace, you can go from CSV to datashare in **\<60 seconds**.
+With the Chakra data marketplace, you can go from CSV to data share in **\<60 seconds**.
 
 | Page                                             | Description                        |
 | ------------------------------------------------ | ---------------------------------- |
@@ -23,4 +23,6 @@ With the Chakra data marketplace, you can go from CSV to datashare in **\<60 sec
 | [Publish](https://console.chakra.dev/worksheet)  | Share your data with the world     |
 | [Manage](https://console.chakra.dev/marketplace) | View and manage your subscriptions |
 
-In addition to individual contributors, Chakra is working with several enterprise partners to bootstrap the marketplace. These will be announced shortly.
+<Card title='Featured Data Shares' icon='database' href='/marketplace/verified'>
+  Verified data shares from partners.
+</Card>
