add FAQ + some clean-up

--- a/scout/introduction.mdx
+++ b/scout/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Introduction'
 description: 'Contribute to the open data marketplace and earn rewards'
-icon: 'puzzle-piece'
+icon: 'globe'
 ---
 
 <Note>
